--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "express": "^4.21.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.20.0"
   }
 }
