--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "cors": "^2.8.5",
     "express": "^4.21.0"
   },
   "devDependencies": {
