--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "22"
+  },
   "scripts": {
-    "test": "node server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
